--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -23,7 +23,9 @@
 	- unless object.imdbid.nil? || (movies = Movie.by_imdbid(object.imdbid)).empty?
 		%li{:class => "icon-list"}
 			- movies.each do |movie|
-				= render "movies/movie", :movie => movie
+				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle) 
+				= render(:partial => "mediafiles/mediafile", :object => movie.file)
+				= render "streamdetails/logos", :streamdetails => movie.details
 
 	-# unless object.imageurl.nil? || object.imageurl.empty?
 		%li{:class => "icon-picture"}
