--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -7,6 +7,13 @@
 	
 	- unless item.imdbid.nil?
 		%li= link_to "#{item.imdbid}", "http://www.imdb.de/title/#{item.imdbid}"
+		
+	- unless item.imdbid.nil? || (movies = Movie.by_imdbid(item.imdbid)).empty?
+		- movies.each do |movie|
+			%li
+				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
+				= render(:partial => "mediafiles/mediafile", :object => movie.file)
+				= render "streamdetails/logos", :streamdetails => movie.details
 	
 	%li
 		Quelle:
