--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -26,6 +26,14 @@
 				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
 				= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				= render "streamdetails/logos", :streamdetails => movie.details
+				
+	- if object.imdbid.nil? && !(movies = Movie.soundex_find(:all, :soundex => object.title)).empty?
+		- movies.each do |movie|
+			%li{:class => "icon-list"}
+				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
+				= render(:partial => "mediafiles/mediafile", :object => movie.file)
+				= render "streamdetails/logos", :streamdetails => movie.details
+		
 
 	-# unless object.imageurl.nil? || object.imageurl.empty?
 		%li{:class => "icon-picture"}
