--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -27,7 +27,7 @@
 				= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				= render "streamdetails/logos", :streamdetails => movie.details
 				
-	- if object.imdbid.nil? && !(movies = Movie.soundex_find(:all, :soundex => object.title)).empty?
+	- if object.imdbid.nil? && !other[:movietitle].nil? && !(movies = Movie.soundex_find(:all, :soundex => other[:movietitle])).empty?
 		- movies.each do |movie|
 			%li{:class => "icon-list"}
 				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
