--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -15,6 +15,15 @@
 				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
 				= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				=# render("streamdetails/logos", :streamdetails => movie.details)
+				
+	- if item.imdbid.nil? && !item.other[:movietitle].nil? && !(movies = Movie.soundex_find(:all, :soundex => item.other[:movietitle])).empty?
+		- movies.each do |movie|
+			%li{:class => "icon-list"}
+				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
+				= render(:partial => "mediafiles/mediafile", :object => movie.file)
+				=# render "streamdetails/logos", :streamdetails => movie.details
+
+
 	%li
 		Quelle:
 		= link_to "Lokal", entrant_url(item)
