--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -8,7 +8,7 @@
 			%th IMDB
 		%th{:colspan => 2} Quelle
 		- if item.update_counter > 0
-			%th Updates
+			%th Änderungen
 	%tr
 		%td= item.category
 		
