--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -6,7 +6,7 @@
 			%th Erscheinungsjahr
 		- unless item.imdbid.nil?
 			%th IMDB
-		%th{:colspan => 2} Quelle
+		%th Quelle
 		- if item.update_counter > 0
 			%th Änderungen
 	%tr
