--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -23,6 +23,7 @@
 	- unless object.imdbid.nil? || (movies = Movie.by_imdbid(object.imdbid)).empty?
 		- movies.each do |movie|
 			%li{:class => "icon-list"}
+				= render("movies/title", :movie => movie)
 				= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
 				= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				= render "streamdetails/logos", :streamdetails => movie.details
