--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -20,7 +20,7 @@
 		%li{:class => "icon-tag"}
 			= object.category
 	
-	- unless object.imdbid.nil? || (movies = Movie.by_imdbid(object.imdbid)).empty?
+	- unless object.imdbid.nil? || ((movies = Movie.by_imdbid(object.imdbid)).empty? || (movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => other[:movieyear]}, :soundex => other[:movietitle])).empty?)
 		- movies.each do |movie|
 			%li{:class => "icon-list"}
 				= render("movies/title", :movie => movie)
@@ -28,7 +28,7 @@
 				= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				= render "streamdetails/logos", :streamdetails => movie.details
 				
-	- if object.imdbid.nil? && !other[:movietitle].nil? && !other[:movieyear].nil? && !(movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => other[:movieyear]}, :soundex => other[:movietitle])).empty?
+	-# if object.imdbid.nil? && !other[:movietitle].nil? && !other[:movieyear].nil? && !(movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => other[:movieyear]}, :soundex => other[:movietitle])).empty?
 		- movies.each do |movie|
 			%li{:class => "icon-list"}
 				= render("movies/title", :movie => movie)
