--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -19,6 +19,7 @@
 	- unless object.category.nil? || object.category.empty?
 		%li{:class => "icon-tag"}
 			= object.category
+			
 	
 	- if !(object.imdbid.nil? || (movies = Movie.by_imdbid(object.imdbid)).empty?) || (object.imdbid.nil? && !other[:movietitle].nil? && !other[:movieyear].nil? && !(movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => other[:movieyear]}, :soundex => other[:movietitle])).empty?)
 		- movies.each do |movie|
@@ -37,6 +38,12 @@
 			= link_to "Lokal", entrant_url(object)
 			= link_to "Extern", object.srcurl
 			
+	- unless object.links.nil? || object.links.empty?
+		- object.links.each do |link|
+			%li{:class => "icon-share-alt"}
+				= link_to link, link
+
+			
 	%li{:class => "icon-calendar"}
 		= l object.date, :format => :with_weekday_and_time
 
@@ -46,6 +53,8 @@
 
 		%li{:class => "icon-repeat"}
 			= object.update_counter
+
+
 	
 		- unless object.diff.nil? || object.diff.empty?
 			- object.diff.each do |diff|
