--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -1,3 +1,4 @@
+= item.category
 %table
 	%tr
 		%th Kategorie
@@ -33,25 +34,8 @@
 		- item.diff.each do |diff|
 			%tr
 				%td= raw diff
-
-- unless item.imdbid.nil? || (movies = Movie.by_imdbid(item.imdbid)).empty?
-	%table
-		%tr
-			%th Vorhandener Titel
-			%th Pfad
-			%th Dateien
-			-#
-				%th Technische Daten
-		- movies.each do |movie|
-			%tr
-				%td= link_to movie.path.topdirectory, mediapath_path(movie.path), :rel => "tooltip", :title => movie.path.strPath
-				%td= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
-				%td= render(:partial => "mediafiles/mediafile", :object => movie.file)
-				-#
-					%td= render("streamdetails/logos", :streamdetails => movie.details)
 				
-				
-- if item.imdbid.nil? && !item.other[:movietitle].nil? && !item.other[:c07].nil?  && !(movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => item.other[:movieyear]}, :soundex => item.other[:movietitle])).empty?
+- if !(item.imdbid.nil? || (movies = Movie.by_imdbid(item.imdbid)).empty?) || (item.imdbid.nil? && !item.other[:movietitle].nil? && !item.other[:movieyear].nil? && !(movies = Movie.soundex_find(:all, :limit => 10, :conditions => {:c07 => item.other[:movieyear]}, :soundex => item.other[:movietitle])).empty?)
 	%table
 		%tr
 			%th Vorhandener Titel
