--- a/app/views/entrants/_sfile.html.haml
+++ b/app/views/entrants/_sfile.html.haml
@@ -44,19 +44,7 @@
 			= link_to "Extern", object.srcurl
 			
 	- unless object.links.nil? || object.links.empty?
-		- object.clustered_links.each do |hoster,links|
-			%li{:class => "icon-share-alt"}
-				%form{:action => 'http://127.0.0.1:9666/flash/add', :target => "hidden", :method => "POST", :style => "margin: 0px; margin-left: 8px; display: inline-block;"}
-					-#
-						%input{:type => 'hidden', :name => 'passwords', :value => 'myPassword'}
-						%input{:type => 'hidden', :name => 'source', 		:value => 'http://jdownloader.org/spielwiese'}
-					%input{:type => 'hidden', :name => 'urls', 			:value => "#{links.join("\r\n")}"}
-					%input{:type => 'SUBMIT', :name => 'submit', 		:value => "add #{links.count} #{hoster} - links to jdownloader"}
-		:javascript
-			var jdownloader=false;
-		%script{:language => "javascript", :src => "http://127.0.0.1:9666/jdcheck.js"}
-		:javascript
-			if(!jdownloader) document.write("<font color='red'>JDownloader is NOT running</font>");
+		%li{:class => "icon-share-alt"}= link_to object.clustered_links.map{|i| "#{i[0]} (#{i[1].size})"}.join(' '), downloadlinks_entrant_path(object)
 
 	%li{:class => "icon-calendar"}
 		= l object.date, :format => :with_weekday_and_time
