--- a/app/views/layouts/application_one_column_content.html.haml
+++ b/app/views/layouts/application_one_column_content.html.haml
@@ -10,6 +10,7 @@
 		%meta{ :"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8" }
 		= favicon_link_tag asset_path('favicon.ico'), :type => "image/x-icon"
 		= favicon_link_tag asset_path('borg.png'), 		:rel => 'apple-touch-icon', :type => 'image/png' 
+		= favicon_link_tag asset_path('borg.png'), 		:rel => 'apple-touch-icon-precomposed', :type => 'image/png' 
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
