--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -44,7 +44,8 @@
 		- movies.each do |movie|
 			%tr
 				%td= link_to movie.path.topdirectory, mediapath_path(movie.path), :rel => "tooltip", :title => movie.path.strPath
-				%td= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
+				- unless movie.path.nil?
+					%td= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
 				%td= render(:partial => "mediafiles/mediafile", :object => movie.file)
 				-#
 					%td= render("streamdetails/logos", :streamdetails => movie.details)
