--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -2,10 +2,10 @@
 	%tr
 		%th Kategorie
 		- unless item.other[:movietitle].nil?
-			%th Filmtitel
-			%th Erscheinungsjahr
+			%th Titel
+			%th Jahr
 		- unless item.infos.nil?
-			%th Technische Informationen
+			%th Technische Infos
 		- unless item.imdbid.nil?
 			%th IMDB
 		%th Quelle
