--- a/app/assets/stylesheets/borg.css.scss
+++ b/app/assets/stylesheets/borg.css.scss
@@ -198,12 +198,11 @@ ul.files {
 
 
 
-.audiolanguage,
-.subtitlelanguage {
+.techflag {
+	width: 50px;
+	text-align: center;
 	vertical-align: middle;
 	span {
 		line-height: 2.3em;
-		margin-left: 6px;
-		margin-right: 4px;
 	}
 }
