--- a/app/views/mediafiles/_cover.html.haml
+++ b/app/views/mediafiles/_cover.html.haml
@@ -9,7 +9,7 @@
 
 	- if animate
 		- mediafile.movie.cover.each do |image|
-			= lazy_image_tag(image, :class=>"cover remote", :style => "display: none;")
+			= image_tag(image, :class=>"cover remote", :style => "display: none;")
 
 
 - if animate
