--- a/app/views/mediafiles/_fanart.html.haml
+++ b/app/views/mediafiles/_fanart.html.haml
@@ -9,7 +9,7 @@
 
 	- if animate
 		- mediafile.movie.fanart.each do |image|
-			= lazy_image_tag(image, :class=>"fanart remote", :style => "display: none;")
+			= image_tag(image, :class=>"fanart remote", :style => "display: none;")
 
 - if animate
 	:javascript
