--- a/app/views/movies/_title.html.haml
+++ b/app/views/movies/_title.html.haml
@@ -1,3 +1,4 @@
+- title_path_mismatch = movie.path.topdirectory != movie.localtitle
 %span{:class => "label label-info", :rel => "tooltip", :title => "Deutscher Titel"}
 	= movie.localtitle
 %span.label.label-info{:rel => "tooltip", :title => "Erscheinungsjahr"}
