--- a/app/views/entrants/_feedcontent_sfile.rss.haml
+++ b/app/views/entrants/_feedcontent_sfile.rss.haml
@@ -45,7 +45,7 @@
 			- unless movie.path.nil?
 				%tr
 					%td= link_to movie.path.topdirectory, mediapath_path(movie.path), :rel => "tooltip", :title => movie.path.strPath
-					%td= render("mediapath/mediapath", :mediapath => movie.path, :title_path_mismatch => movie.path.topdirectory != movie.localtitle)
+					%td= render("mediapath/mediapath", :mediapath => movie.path, :title_dir_match => movie.localtitle_topdirectory_match?)
 					%td= render(:partial => "mediafiles/mediafile", :object => movie.file)
 					-#
 						%td= render("streamdetails/logos", :streamdetails => movie.details)
