--- a/app/views/mediapath/_mediapath.html.haml
+++ b/app/views/mediapath/_mediapath.html.haml
@@ -1,4 +1,4 @@
 - classes = []
-- classes = ["label","label-warning"] if title_path_mismatch
+- classes = ["label","label-warning"] unless title_dir_match
 %span{:class => classes}
 	= link_to mediapath.topdirectory, mediapath_path(mediapath), :rel => "tooltip", :title => mediapath.strPath
